# rust_aoc2022

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml
benches/: aoc_benchmark.rs
benchmark-report/Day 1 Part 1/base/: raw.csv  sample.json
benchmark-report/Day 1 Part 1/new/: benchmark.json  estimates.json  tukey.json
benchmark-report/Day 1 Part 1/report/: index.html
benchmark-report/Day 1 Part 2/base/: estimates.json  raw.csv
benchmark-report/Day 1 Part 2/new/: benchmark.json  sample.json  tukey.json
benchmark-report/Day 1 Part 2/report/: index.html
benchmark-report/report/: index.html
src/: main.rs
src/days/: 1  aoc.rs  day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
