[package]
name = "rust_aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
emojis = "0.5.1"
criterion = "0.3"
regex = "1.7.0"
lazy_static = "1.4.0"

[[bench]]
name = "aoc_benchmark"
harness = false
